# opennask

./: .circleci-matrix.yml  .gitignore  .gitmodules  .travis.yml  01.nasfile.nas  AUTHORS  AdditionalInfo.txt  CMakeLists.txt  Dockerfile  Makefile.am  NEWS  README.md  appveyor.yml  circle.yml  configure.ac  cross-i686-w64-mingw32.sh  docker-compose.yml  index.html  interactive.sh  main.cpp  nask_defs.hpp  nask_functional_test.sh  nask_utility.cpp  nask_utility.hpp  ninja_build.sh  ninja_test.sh  params.json  rebuild.sh  rules.mk
dosfstools/: CHANGES  CMakeLists.txt  Makefile.am  README  README.Atari  TODO  backup.mk  bootstrap  configure.ac  version.h
dosfstools/dosfsck/: CHANGES  COPYING  Makefile.am  README  backup.mk  boot.c  check.c  common.c  common.h  dosfsck  dosfsck.8  dosfsck.c  dosfsck.h  fat.c  file.c  io.c  io.h  lfn.c
dosfstools/mkdosfs/: ANNOUNCE  ChangeLog  Makefile.am  Makefile.dos  README  backup.mk  getopt.c  main.c  mkdosfs-ygg-0.3b.lsm  mkdosfs.8  mkdosfs.c  mkdosfs.h
fatlib/: CMakeLists.txt  Makefile.am  README  TODO  backup.mk  buf.c  configure.ac  cp.c  cp850.c  cp852.c  del.c  delete.c  dir.c  drive.c  dstat.c  fat.c  fatlib.h  file.c  img.c  lib.h  libfat.sym  mkdir.c  nocp.c  opensubdir.c  readdir.c  rmdir.c  seekdir.c  stdio.c  uni_up.inc
fatlib/examples/: Makefile.am  backup.mk  ddi.c  fdir.c  fdstat.c  fget.c  fput.c
golibc/: CMakeLists.txt  strtol.c
intel2gas/: BUGS  CMakeLists.txt  ChangeLog  DATAFILES  INSTALL  Makefile.am  README  THANKS  TODO  absolute.cc  absolute.h  bk_Makefile.in  bk_configure  bootstrap  configure.ac  i2g.cc  i2gconf.h.in  intel2gas.cc  intel2gas.h  intel2gas.spec  list.cc  list.h  loadable.h  loaddata.cc  loaddata.h  match.h  strhandle.cc  strhandle.h  whitespace.cc  whitespace.h
intel2gas/g2i/: +-.01.list  addr.syntax  address.syntax  data.01.list  data.02.list  data.04.list  fpureg.syntax  jumpaddr.syntax  main.syntax  mathnum.syntax  num.syntax  numlist.syntax  op.01.list  op.02.list  op.10.list  reg.02.list  reg.04.list  reg.10.list  size.01.list  size.02.list  size.04.list  size.08.list  size.10.list  strings.syntax
intel2gas/i2g/: +-.01.list  +-.02.list  address.syntax  data.01.list  data.02.list  data.04.list  data.08.list  discard.01.list  fpureg.syntax  jump.syntax  main.syntax  mathnum.syntax  num.syntax  numlist.syntax  op.01.list  op.02.list  op.04.list  op.08.list  op.10.list  op.20.list  reg.01.list  reg.02.list  reg.04.list  reg.08.list  reg.10.list  section.01.list  size.01.list  size.02.list  size.04.list  size.08.list  size.10.list  textlist.syntax
intel2gas/m2g/: +-.02.list  address.syntax  data.01.list  data.02.list  data.04.list  data.08.list  discard.01.list  fpureg.syntax  jump.syntax  main.syntax  manypublics.syntax  num.syntax  op.04.list  op.08.list  op.20.list  reg.01.list  reg.08.list  section.01.list  size.01.list  size.02.list  size.04.list  size.08.list  size.10.list  textlist.syntax
objconv/: CMakeLists.txt  changelog.txt  disasm2.cpp  maindef.h
parasol/: AA_README  CMakeLists.txt  COPYING-ModifiedBSD  Makefile.am  ParaBuiltinFunction.cc  ParaBuiltinFunction.hh  ParaContainerLibrary.cc  ParaContainerLibrary.hh  ParaDefs.cc  ParaDefs.hh  ParaExpression.cc  ParaExpression.hh  ParaFunction.cc  ParaFunction.hh  ParaMathLibrary.cc  ParaMathLibrary.hh  ParaObject.cc  ParaObject.hh  ParaOperator.cc  ParaOperator.hh  ParaPackage.cc  ParaPackage.hh  ParaParser.cc  ParaParser.hh  ParaStandardLibrary.cc  ParaStandardLibrary.hh  ParaStatement.cc  ParaStatement.hh  ParaSymbolTable.cc  ParaSymbolTable.hh  ParaToken.cc  ParaToken.hh  ParaTokenTable.cc  ParaTokenTable.hh  ParaTokenizer.cc  ParaTokenizer.hh  ParaValue.cc  ParaValue.hh  configure.ac
parasol/samples/: Makefile.am  array.yaci  dump.yaci  expressionsample.cc  factorial.yaci  hello.yaci  line-number.yaci  list.yaci  listmath.yaci  matherror.yaci  solve.cc  statementsample.cc  tokenizersample.cc  variant.yaci  yaci.cc
projects/: CMakeLists.txt  Makefile.am  automake.sh  bootpack.ld  cmake.sh  cmake_02day.sh  cmake_from_21day.sh  cmake_helloos.sh  cmake_until_20day.sh  os.lds
projects/01_day/: CMakeLists.txt  Makefile.am
projects/02_day/: CMakeLists.txt  Makefile.am
projects/03_day/: CMakeLists.txt  Makefile.am
projects/04_day/: CMakeLists.txt
projects/05_day/: CMakeLists.txt
projects/06_day/: CMakeLists.txt
projects/07_day/: CMakeLists.txt
projects/08_day/: CMakeLists.txt
projects/09_day/: CMakeLists.txt
projects/10_day/: CMakeLists.txt
projects/11_day/: CMakeLists.txt
projects/12_day/: CMakeLists.txt
projects/13_day/: CMakeLists.txt
projects/14_day/: CMakeLists.txt
projects/15_day/: CMakeLists.txt
projects/16_day/: CMakeLists.txt
projects/17_day/: CMakeLists.txt
projects/18_day/: CMakeLists.txt
projects/19_day/: CMakeLists.txt
projects/20_day/: CMakeLists.txt
projects/21_day/: CMakeLists.txt
projects/22_day/: CMakeLists.txt
projects/23_day/: CMakeLists.txt
projects/24_day/: CMakeLists.txt
projects/25_day/: CMakeLists.txt
projects/26_day/: CMakeLists.txt
projects/27_day/: CMakeLists.txt
reflcpp/: Makefile.am  configure.ac  reflcpp.pc.in
src/: CMakeLists.txt  Makefile.am  bin2obj.c  bin_util.cc  bin_util.hh  bracket_impl.hpp  bracket_utility.hpp  calc++.cc  clogger.hpp  coff.h  demangle.cpp  demangle.hpp  driver.cc  driver.hh  front_end.cc  front_end.hh  front_end_ext.hh  getopt.h  label.cpp  label.hpp  main.cpp  mod_rm.cpp  mod_rm.hpp  nask_ast.cpp  nask_ast.hh  nask_defs.hpp  nask_parse.cpp  nask_parse_common.hh  nask_utility.cpp  nask_utility.hpp  object_file_writer.cc  object_file_writer.hh  old_nask_defs.hpp  para_token.cc  para_token.hh  parser.yy  pass1_strategy.cc  pass1_strategy.hh  scanner.ll  string_util.cpp  (+5 more)
test/: .editorconfig  CMakeLists.txt  Makefile.am  alltest.cpp  day01test.cpp  day02test.cpp  day03test.cpp  day04test.cpp  day05test.cpp  day06test.cpp  day09test.cpp  day12_naskfunc.sha256  diff.hh  example_suite.cpp  exp_suite.cpp  inst_suite.cpp  modrmtest.cpp  nask_suite.cpp  para_token_test.cpp  pass1_test.cpp  tinyexpr_suite.cpp  x86_table_test.cpp
(+437 files in other folders)
