# Makefile.in for parasol
# Created by Enomoto Sanshiro on 7 July 1999.
# Last updated by Enomoto Sanshiro on 8 September 1999.
# Modified by Hiroyuki Nagata on 11 May 2016

#SUBDIRS = samples
noinst_LIBRARIES	= libparasol.a
libparasol_a_SOURCES	= ParaDefs.cc             \
                          ParaTokenTable.cc	  \
                          ParaToken.cc		  \
                          ParaTokenizer.cc	  \
                          ParaValue.cc		  \
                          ParaObject.cc		  \
                          ParaOperator.cc	  \
                          ParaExpression.cc	  \
                          ParaSymbolTable.cc	  \
                          ParaStatement.cc	  \
                          ParaFunction.cc	  \
                          ParaBuiltinFunction.cc  \
                          ParaPackage.cc	  \
                          ParaParser.cc		  \
                          ParaStandardLibrary.cc  \
                          ParaContainerLibrary.cc \
                          ParaMathLibrary.cc
