message(STATUS "Entering directory projects/")
cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
project(images)

# now images target is adding into ALL target
add_custom_target(images)
add_custom_target(wine)
add_custom_target(od)

add_dependencies(wine images)
add_dependencies(od wine)

add_subdirectory(01_day)
add_subdirectory(02_day)
add_subdirectory(03_day)
add_subdirectory(04_day)
add_subdirectory(05_day)
add_subdirectory(06_day)
add_subdirectory(07_day)
add_subdirectory(08_day)
add_subdirectory(09_day)
add_subdirectory(10_day)

add_subdirectory(11_day)
add_subdirectory(12_day)
add_subdirectory(13_day)
add_subdirectory(14_day)
add_subdirectory(15_day)
add_subdirectory(16_day)
add_subdirectory(17_day)
add_subdirectory(18_day)
add_subdirectory(19_day)
add_subdirectory(20_day)
